--- a/_posts/2015-03-26-内存管理.md
+++ b/_posts/2015-03-26-内存管理.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title:  "NSNotificationCenter part 2: Implementing the observer pattern with notifications"
+title:  "内存管理"
 date: 2015-03-16
 description: ""
 category: 内存管理
