--- a/_posts/2015-03-26-内存管理.md
+++ b/_posts/2015-03-26-内存管理.md
@@ -18,7 +18,7 @@ share: true
 
 
 <!--more-->
-* 对象通过alloc copy创建    retain count +1
+* 对象通过alloc copy new创建    retain count +1
 
 * 对象 addXXX     retain count +1
 
@@ -38,4 +38,17 @@ share: true
 
 * [super dealloc]要在 -(void)dealloc;中最后调用；
 
-* autorelease的 只有在对象retain count +1 时才会被调用；
+* autorelease的 只有在对象retain count +1，或者离开当前作用域时才会被调用；
+
+* 用 initWithXXX 创建的对象带有 autorelease 属性
+
+* ARC 是在编译时工作，编译时在合适的位置自动插入retain release. object-c中没有垃圾回收功能
+
+* assign retain copy 关键字
+
+	assign 修饰一般类型 NSString，NSSArray，是弱引用 retain count 不会增加
+	
+	retain，copy 修饰对象 ，属于强引用
+	
+	 
+
